# FluxMonitorQT

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  flux_monitor_qt.desktop  install.sh  run.sh  run_debug.sh
.claude/: settings.local.json
src/: app.rs  lib.rs  main.rs  monitor.rs  ui.rs
